--- a/styles.css
+++ b/styles.css
@@ -431,6 +431,166 @@ span {
     background: var(--main-color);
   }
 
+  @media (max-width: 1325px){
+    header {
+      padding: 16px 3%;
+    }
+    .header.sticky {
+      padding:8px 3%;
+    }
+    section {
+      padding: 130px 3% 60px;
+    }
+  }
+
+  @media (max-width:970px) {
+    :root {
+      --h1-font: 4.2rem;
+      --h2-font: 2.9rem;
+      --p-font: 1rem;
+    }
+    section {
+      padding: 70px 3% 60px;
+    }
+    .home {
+      height: 85vh;
+    }
+    .about {
+      grid-template-columns: 1fr;
+    }
+    .about-img {
+      text-align: center;
+    }
+    .contact {
+      grid-template-columns: 1fr;
+    }
+    
+  }
+
+  @media (max-width: 830px) {
+    #menu-icon {
+      display: block;
+    }
+    .navbar {
+      position: absolute;
+      top: -600px;
+      right: 0;
+      left: 0;
+      display: flex;
+      flex-direction: column;
+      background: #12141c;
+      text-align: left;
+      transition: all .40s ease;
+    }
+    .navbar a {
+      display: block;
+      padding: 1rem;
+      margin: 1rem;
+    }
+    .navbar.active {
+      top: 100%;
+    }
+    :root {
+      --h1-font: 3.7rem;
+      --h2-font: 2.7rem;
+    }
+    
+  }
+/*
+  .back-video {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+  }
+*/
+  @media (min-aspect-ratio: 16/10) {
+    .back-video {
+      width: 110%;
+      height:auto;
+    }
+    
+  }
+  @media (max-aspect-ratio: 16/10) {
+    .back-video {
+      width: auto;
+      height: 100%;
+    }
+    
+  }
+  /*
+  img {
+    height: 150px;
+    width: 150px;
+  }
+  .tech-skills h2 {
+    font-size: var(--h2-font);
+    text-align: center;
+  }
+  .skills {
+    box-sizing: border-box;
+  }
+
+  .diff-skills::after {
+    content: "";
+    display: table;
+    clear:both;
+  }
+
+  .skill-item {
+    float:left;
+    width:14.28%;
+    height:90%;
+    padding: 8px;
+  }
+*/
+  @media (max-width:660px) {
+    .skill-item img {
+      height: 90%;
+      width:90%;
+    }
+    .tech-skills h2 {
+      font-size: var(--h2-font);
+    }
+    
+  }
+
+  /*Technical skills css
+  * {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Roboto' sans-serif;
+  }
+
+  .inner {
+    padding-top: 20px;
+  }
+
+  .Tech_header {
+    text-align: center;
+    color: #fff;
+    padding: 1rem;
+    position: relative;
+  }
+
+  .Tech_header::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    height: 4px;
+    width: 100px;
+    background-color: #eb4a4a;
+    border-radius: 2px;
+  }
+
+  .Tcontainer {
+    display: grid;
+
+  }
+*/
 
   
 
